# WebRustRayTracing

./: Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
css/: custom.css
js/: main.js
pkg/: package.json  ray_tracing_wasm.d.ts  ray_tracing_wasm.js  ray_tracing_wasm_bg.wasm  ray_tracing_wasm_bg.wasm.d.ts
scenes/: ellipsoids.json  materials.json  meshes.json  reflections.json  shadows.json  spheres.json
src/: camera.rs  ellipsoid.rs  format.rs  lib.rs  light.rs  material.rs  mesh.rs  plane.rs  sphere.rs
